add logs/comments/javadocs in service package